# PySpice

./: .gitignore  pyproject.toml
PySpice/Doc/: ExampleTools.py
PySpice/Plot/: BodeDiagram.py
PySpice/Spice/: BasicElement.py  Library.py  Netlist.py  Parser.py  Parser_jmgc.py
PySpice/Spice/NgSpice/: RawFile.py  Shared.py
PySpice/Unit/: Unit.py  __init__.py
examples/: run-examples
examples/diode/: diode-characteristic-curve.py  diode-recovery-time.py  ring-modulator.py  zener-characteristic-curve.py
examples/fundamental-laws/: millman-theorem.py  thevenin-norton-theorem.py  voltage-current-divider.py
examples/resistor/: resistor-bridge.py  voltage-divider.py
