[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PySpice"
dynamic = ["version"]
description = "Simulate electronic circuit using Python and the Ngspice / Xyce simulators"
readme = "README.rst"
authors = [
    {name = "Fabrice Salvaire", email = "pyspice@fabrice-salvaire.fr"},
]
maintainers = [
    {name = "Fabrice Salvaire", email = "pyspice@fabrice-salvaire.fr"},
]
license = {text = "GPLv3"}
keywords = [
    "ngspice",
    "xyce",
    "spice",
    "berkeley",
    "electronic",
    "circuit",
    "simulation",
    "simulator",
]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Education",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
]
requires-python = ">=3.6"
dependencies = [
    "pyyaml>=5.3",
    "cffi>=1.14",
    "matplotlib>=3.2",
    "numpy>=1.18",
    "scipy>=1.4",
    "requests>=2.23",
    "pint>=0.17",
    "ply>=3.10",
]

[project.urls]
Homepage = "https://github.com/FabriceSalvaire/PySpice"
Documentation = "https://pyspice.fabrice-salvaire.fr"
Code = "https://github.com/FabriceSalvaire/PySpice"
"Issue Tracker" = "https://github.com/FabriceSalvaire/PySpice/issues"
Forum = "https://pyspice.discourse.group"

[project.scripts]
cir2py = "PySpice.Scripts.cir2py:main"
pyspice-post-installation = "PySpice.Scripts.pyspice_post_installation:main"

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.12.3",
    "check-manifest>=0.48",
    "flake8>=4.0.1",
    "invoke>=2.2.1",
    "pelican>=4.6.0",
    "pygithub>=1.56",
    "pylint>=2.3.0",
    "pyterate>=2.1.5",
    "pytest>=7.0.1",
    "requests>=2.27.1",
    "sphinx>=4.3.2",
    "sphinxcontrib-getthecode>=1.2.1",
    "tox>=3.28.0",
    "twine>=3.8.0",
    "wheel>=0.37.1",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
version = {attr = "PySpice.__version__"}

[tool.setuptools.packages.find]
exclude = ["unit-test"]

[tool.setuptools.package-data]
"PySpice.Config" = ["logging.yml"]
"PySpice.Spice.NgSpice" = ["api.h"]

[tool.wheel]
universal = true

[tool.flake8]
max-line-length = 120
ignore = ["E226", "E302", "E303", "E305", "E402"]

[tool.pylint.messages_control]
disable = [
  "fixme",
  "invalid-name",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-else-return",
]
